--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,7 @@ body{
 nav{
     box-shadow: 0px 0px 10px rgb(0 0 0 / 75%);
 }
-nav ul a:hover{
+nav a:hover{
     --tw-bg-opacity: 1;
     background-color: rgb(229 231 235 / var(--tw-bg-opacity));
     border-radius: 0.25rem/* 4px */;
